--- a/.travis.yml
+++ b/.travis.yml
@@ -1,4 +1,18 @@
 language: go
 script: true
 go:
-- 1.21.3 
+- 1.21.3
+
+sudo: required
+
+os:
+  - linux
+
+
+install:
+  - echo "install"
+
+script:
+  - echo "script"
+  - make dev
+
